<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/im01"
                android:contentDescription="@string/cdesm"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/food" />

            <TextView
                android:id="@+id/tv01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/im01"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="monospace"
                android:text="@string/Heading"
                android:textSize="34sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:id="@+id/im02"
                android:contentDescription="@string/cdesl"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_below="@id/tv01"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/loc" />

            <TextView
                android:id="@+id/tv04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv01"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/im02"
                android:fontFamily="sans-serif-thin"
                android:text="@string/Add"
                android:textSize="20sp"
                android:textColor="@color/black"
                />


            <ImageView
                android:id="@+id/im03"
                android:contentDescription="@string/cdesc"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_below="@id/im02"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="55dp"
                android:src="@drawable/contact" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/tv05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv04"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/im03"

            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phno"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/website"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <ImageView
                android:contentDescription="@string/cdest"
                android:id="@+id/im04"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_below="@id/im03"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/tv06"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/tv05"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/im03"
                android:fontFamily="sans-serif-thin"
                android:text="@string/time"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_below="@id/tv06"
                android:text="@string/des"
                android:textSize="20sp"
                android:fontFamily="sans-serif-thin"
                android:layout_marginBottom="40dp"
                android:textColor="@color/black"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>